deploy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-someu-front-angular
  #namespace: test
spec:
  selector:
    matchLabels:
      app: nodejs-someu-front-angular
  template:
    metadata:
      labels:
        app: nodejs-someu-front-angular
    spec:
      containers:
        - name: nodejs-someu-front-angular
          image: iuripetrola/nodejs-someu-front-angular:latest
          ports:
          - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-someu-front-angular
  #namespace: test
spec:
  selector: 
    app: nodejs-someu-front-angular
  ports:
    - port: 80
      targetPort: 443
#     nodePort: 443      
# type: NodePort
